# finances-dw

./: .gitignore  README.md  bydhistorico.csv  dados_extract.csv  dados_extract2.csv  dados_filtered.csv  dados_filtered19.csv  pyproject.toml  s
app/: dados_filtered29.csv  grafico.py
src/: .env  extract_load.py  extractv1.py  fluxobasico.py
